--- a/test.html
+++ b/test.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset='utf-8'
     <title>Смарт-Экспресс — неофициальный сайт</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='js/jquery-3.6.0.min.js'></script>
